colorrepresentation: fix color range being ignored

BUG: 508615
BUG: 503080
(cherry picked from commit 2e76f8fb4baa48f5f23af152a2042848f889705d)